# llm_chat_projects

./: pyproject.toml
src/: agent-with-conv-kbase.py  basic-agent-with-langchain.py  basic-conv-stream-with-bedrocksdk.py  basic-conv-with-bedrocksdk.py  basic-qa-with-bedrocksdk.py  llm-conv-with-langchain.py
